# HRG-Dynamic-Gesture-Control

./: 2_HRG_MP3.pro  CMakeLists.txt  README.md  connectthread.cpp  connectthread.h  dtwrecoge.cpp  dtwrecoge.h  handfinder.cpp  handfinder.h  mp3.cpp  mp3.h  mp3.ui  setparam.cpp  setparam.h  setparam.ui  widget.cpp  widget.h  widget.ui
include/: HrgTofApi.h  HrgTofEnums.h  HrgTofTypes.h  helper.h
resource/: MyGesture.txt
